hide nav bar buttons

--- a/CaR/index.html
+++ b/CaR/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv=X-UA-Compatible content="IE=edge">
 <meta name=description content="">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
-<title>Carros | Repair shop</title>
+<title>Автозапчасти | Car parts</title>
 <meta name=msapplication-tap-highlight content=no>
 <meta name=mobile-web-app-capable content=yes>
 <meta name=application-name content="">
@@ -26,7 +26,7 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 <body id=home class=page-home>
-<div id=preloader><img src=images/three-dots.svg alt=#></div> 
+<div id=preloader><img src=images/three-dots.svg alt=#></div>
 <svg style="display: none">
     <defs>
         <filter id=svg-filter>
@@ -46,12 +46,12 @@
                 <button type=button data-toggle=collapse data-target=#navbar aria-expanded=false aria-controls=navbar
                         class="navbar-toggle collapsed"><span class=sr-only>Toggle navigation</span><span
                         class=icon-bar></span><span class=icon-bar></span><span class=icon-bar></span></button>
-                <a href=index.html class=navbar-brand><span class=navbar-brand__image><i
+                <a href=index.html class=navbar-brand><span style="height: 20px" class=navbar-brand__image><i
                         class="logo-font pe-7s-car"></i><img src=# alt="" style="display: none"
-                                                             class=img-responsive></span><span class=navbar-brand__text>Carros</span></a>
+                                                             class=img-responsive></span><span class=navbar-brand__text>Автозапчасти</span></a>
             </div>
         </div>
-        <div class=container>
+        <!-- <div class=container style="visibility: hidden;">
             <div id=navbar class="collapse navbar-collapse">
                 <div class="col-sm-6 col-md-5">
                     <ul class="nav navbar-nav navbar-menu">
@@ -85,7 +85,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
     </nav>
 </header>
 <main class=page-content>
@@ -93,25 +93,25 @@
              class="section-intro intro-repair parallax bg-dark">
         <div class="section-intro__inner container">
             <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-                <header class=section-intro__heading><span class=h5>auto repair shop     <button onclick="ttyt()">hhhhhh</button>
+                <header class=section-intro__heading><span class=h5> г. Подольск
 </span>
-                    <h1 class=text-danger>Carros</h1>
+                    <h2 class=text-danger>Автозапчасти</h2>
                     <div class=divider-decor>
                         <div class=div></div>
                         <div class=div></div>
                     </div>
                 </header>
-                <div class=section-intro__body><p>Open daily 8:00 — 21:00<br>
-                    <p>64 Weigall Avenue, Mount Bryan<br>
-                    <p><a href=tel:+18184925810>+1 (818) 492 58 10</a></div>
+                <div class=section-intro__body><p>9:00 - 21:00 <br> 7 дней в неделю<br>
+                    <p>адрес магазина<br>
+                    <p><a href=tel:+18184925810>+7 (977) 492 58 10</a></div>
                 <a href=# role=button class="btn btn-regular btn-accent" data-toggle=modal
-                   data-target=#modalReserv><span class=btn-text>Book a service</span><span class=btn-over></span></a>
+                   data-target=#modalReserv><span class=btn-text>Закажите услугу</span><span class=btn-over></span></a>
             </div>
         </div>
     </section>
     <section class="section-row repair-row-service">
         <div class=container>
-            <header class=section-row-number><h1><span class=number>01. </span><span>Services</span></h1></header>
+            <header class=section-row-number><h1><span class=number>01. </span><span>Услуги</span></h1></header>
             <div class=repair-row-service-list>
                 <div class=row>
                     <div class="col-xs-12 col-sm-6 col-md-4 item">
