--- a/CaR/index.html
+++ b/CaR/index.html
@@ -43,9 +43,9 @@
     <nav class="navbar navbar-default navbar-repair" data-skin=default>
         <div class=navbar-header>
             <div class=container>
-                <button type=button data-toggle=collapse data-target=#navbar aria-expanded=false aria-controls=navbar
+                <!-- <button type=button data-toggle=collapse data-target=#navbar aria-expanded=false aria-controls=navbar
                         class="navbar-toggle collapsed"><span class=sr-only>Toggle navigation</span><span
-                        class=icon-bar></span><span class=icon-bar></span><span class=icon-bar></span></button>
+                        class=icon-bar></span><span class=icon-bar></span><span class=icon-bar></span></button> -->
                 <a href=index.html class=navbar-brand><span style="height: 20px" class=navbar-brand__image><i
                         class="logo-font pe-7s-car"></i><img src=# alt="" style="display: none"
                                                              class=img-responsive></span><span class=navbar-brand__text>Автозапчасти</span></a>
@@ -104,14 +104,14 @@
                 <div class=section-intro__body><p>9:00 - 21:00 <br> 7 дней в неделю<br>
                     <p>адрес магазина<br>
                     <p><a href=tel:+18184925810>+7 (977) 492 58 10</a></div>
-                <a href=# role=button class="btn btn-regular btn-accent" data-toggle=modal
-                   data-target=#modalReserv><span class=btn-text>Закажите услугу</span><span class=btn-over></span></a>
+                <!-- <a href=# role=button class="btn btn-regular btn-accent" data-toggle=modal
+                   data-target=#modalReserv><span class=btn-text>Закажите услугу</span><span class=btn-over></span></a> -->
             </div>
         </div>
     </section>
     <section class="section-row repair-row-service">
         <div class=container>
-            <header class=section-row-number><h1><span class=number>01. </span><span>Услуги</span></h1></header>
+            <header class=section-row-number><h1><span class=number>01. </span><span>Мы предлогаем</span></h1></header>
             <div class=repair-row-service-list>
                 <div class=row>
                     <div class="col-xs-12 col-sm-6 col-md-4 item">
@@ -978,7 +978,7 @@
             </div>
             <div class="panel theme-panel"><input type=checkbox data-path=style-rtl.css class=js-rtl-switch></div>
         </div>
-        <div class=theme-config><i class="icon pe-7s-config"></i></div>
+        <!-- <div class=theme-config><i class="icon pe-7s-config"></i></div> -->
     </div>
 </div>
 <script src=js/script.min.js></script>
