hide some sections

--- a/CaR/index.html
+++ b/CaR/index.html
@@ -93,17 +93,16 @@
              class="section-intro intro-repair parallax bg-dark">
         <div class="section-intro__inner container">
             <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-                <header class=section-intro__heading><span class=h5> г. Подольск
-</span>
-                    <h2 class=text-danger>Автозапчасти</h2>
+                <header class=section-intro__heading><span class=h5> г. Подольск</span>
+                     <span style="overflow: hidden;" class="title"><h2 style="position: relative;"class=text-danger>Автозапчасти</h2></span>
                     <div class=divider-decor>
                         <div class=div></div>
                         <div class=div></div>
                     </div>
                 </header>
-                <div class=section-intro__body><p>9:00 - 21:00 <br> 7 дней в неделю<br>
+                <div class=section-intro__body><p> <span 9:00 - 21:00 <br> 7 дней в неделю<br>
                     <p>адрес магазина<br>
-                    <p><a href=tel:+18184925810>+7 (977) 492 58 10</a></div>
+                    <p><span class="blink"> <a href=tel:+18184925810>+7 (977) 492 58 10</a></span></div>
                 <!-- <a href=# role=button class="btn btn-regular btn-accent" data-toggle=modal
                    data-target=#modalReserv><span class=btn-text>Закажите услугу</span><span class=btn-over></span></a> -->
             </div>
@@ -111,52 +110,55 @@
     </section>
     <section class="section-row repair-row-service">
         <div class=container>
-            <header class=section-row-number><h1><span class=number>01. </span><span>Мы предлогаем</span></h1></header>
+            <header class=section-row-number><h1><span>Мы предлогаем</span></h1></header>
             <div class=repair-row-service-list>
                 <div class=row>
                     <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-car-search"></i></div>
-                        <h5>Vehicle diagnostic</h5>
+                        <!-- <h5>Профессиональный<br> подход  к каждому <br> клиенту</h5> -->
                         <div class=divider-decor>
                             <div class=div></div>
                             <div class=div></div>
                         </div>
-                        <p>Let us help you understand any fault codes you may be experiencing with your vehicle.</div>
+                        <p><b>Экономия Вашего времени</b>, а значит и денег, подбор запчастей в кратчайшие сроки.</p>
+                    </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-balancing"></i></div>
-                        <h5>Wheel balancing</h5>
+                        <!-- <h5>Wheel balancing</h5> -->
                         <div class=divider-decor>
                             <div class=div></div>
                             <div class=div></div>
                         </div>
-                        <p>Our wheel balancing procedure checks for any heavy spots on the wheel-tyre combination and
-                            compensating for it.</div>
+                        <p><b>Широкий выбор</b> запчастей, аксессуаров, масел и технических жидкостей.</p>
+                    </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-battery"></i></div>
-                        <h5>battery fitting</h5>
+                        <!-- <h5>battery fitting</h5> -->
                         <div class=divider-decor>
                             <div class=div></div>
                             <div class=div></div>
                         </div>
-                        <p>Setup of replacement battery for vehicles fitted with stop/start technology.</div>
-                    <div class="col-xs-12 col-sm-6 col-md-4 item">
+                        <p><b>Разумные цены</b> за счет тесных отношений с производителями и поставщиками.</p>
+                    </div>
+                    <!-- <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-brake-disk"></i></div>
                         <h5>brake servicing</h5>
                         <div class=divider-decor>
                             <div class=div></div>
                             <div class=div></div>
                         </div>
-                        <p>It’s vital that you get the entire brakes system checked regularly to ensure your safe
-                            driving.</div>
-                    <div class="col-xs-12 col-sm-6 col-md-4 item">
+                        <p><b>Экономия Вашего времени</b>, а значит и денег, подбор запчастей в кратчайшие сроки.</p>
+                    </div> -->
+                    <!-- <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-car-wash"></i></div>
                         <h5>car wash & vacuum</h5>
                         <div class=divider-decor>
                             <div class=div></div>
                             <div class=div></div>
                         </div>
-                        <p>Not only does your engine get a service but the exterior of the vehicle does too.</div>
-                    <div class="col-xs-12 col-sm-6 col-md-4 item">
+                        <p>Not only does your engine get a service but the exterior of the vehicle does too.
+                        </div> -->
+                    <!-- <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-oil"></i></div>
                         <h5>Oil changing</h5>
                         <div class=divider-decor>
@@ -164,14 +166,14 @@
                             <div class=div></div>
                         </div>
                         <p>This isn’t just an oil change; it’s preventive maintenance to help keep your vehicle running
-                            good.</div>
+                            good.</div> -->
                 </div>
             </div>
-            <div class=btn-wrapper><a href=pages/services.html role=button class="btn btn-regular btn-dark"><span
-                    class=btn-text>view all services</span><span class=btn-over></span></a></div>
+            <!-- <div class=btn-wrapper><a href=pages/services.html role=button class="btn btn-regular btn-dark"><span
+                    class=btn-text>view all services</span><span class=btn-over></span></a></div> -->
         </div>
     </section>
-    <section class="section-row section-pricing">
+    <!-- <section class="section-row section-pricing">
         <div class=container>
             <header class=section-row-number><h1><span class=number>02. </span><span>Pricing</span></h1></header>
             <div class="grid-row section-pricing__list row">
@@ -315,7 +317,7 @@
             <div class=btn-wrapper><a href=pages/pricing.html role=button class="btn btn-regular btn-dark"><span
                     class=btn-text>see full price list</span><span class=btn-over></span></a></div>
         </div>
-    </section>
+    </section> -->
     <section class=section-quote>
         <div style="background-image: url(images/upload/intro/repair-car.jpg)"
              class="section-quote__inner parallax bg-dark">
@@ -339,7 +341,7 @@
             </div>
         </div>
     </section>
-    <section class="section-row testimonials">
+    <!-- <section class="section-row testimonials">
         <div class=container>
             <header class=section-row-number><h1><span class=number>03. </span><span>Testimonials</span></h1></header>
             <div class="testimonials-carousel owl-carousel owl-theme">
@@ -524,8 +526,8 @@
                 <div data-control-dots class=control-carousel__dots></div>
             </div>
         </div>
-    </section>
-    <section style="background: url(&quot;images/pattern.jpg&quot;)"
+    </section> -->
+    <!-- <section style="background: url(&quot;images/pattern.jpg&quot;)"
              class="section-row section-stats parallax-repeat dark text-center">
         <div class=container>
             <div class=section-stats__row>
@@ -559,8 +561,8 @@
                     <h4 class=stats-item__title><span>Sound systems</span><span>installed</span></h4></div>
             </div>
         </div>
-    </section>
-    <section class="section-row section-about">
+    </section> -->
+    <!-- <section class="section-row section-about">
         <div class=container>
             <header class=section-row-number><h1><span class=number>04. </span><span>About Us</span></h1></header>
         </div>
@@ -701,8 +703,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class=video-tour>
+    </section> -->
+    <!-- <section class=video-tour>
         <div class=container>
             <div class=row>
                 <div class="col-sm-8 col-lg-6 col-sm-offset-2 col-lg-offset-3 text-center">
@@ -719,11 +721,15 @@
             </div>
             <div id=videoTour class="embed-responsive embed-responsive-16by9"></div>
         </div>
-    </section>
+    </section> -->
+
+
+
     <section class="section-row section-contacts">
         <div class=container>
-            <header class=section-row-number><h1><span class=number>05. </span><span>Contacts</span></h1></header>
+            <header class=section-row-number><h1><span>Контакты</span></h1></header>
         </div>
+            <section id=map class=section-map><h2 class=hide>Section title</h2></section>
         <div class=section-contacts__inner>
             <div class=container>
                 <div class="contacts-list row">
@@ -749,8 +755,9 @@
             </div>
         </div>
     </section>
-    <section id=map class=section-map><h2 class=hide>Section title</h2></section>
-    <section style="background: url(&quot;images/pattern.jpg&quot;)" class="reservation parallax-repeat dark">
+
+
+    <!-- <section style="background: url(&quot;images/pattern.jpg&quot;)" class="reservation parallax-repeat dark">
         <div class=reservation__inner>
             <div class=container>
                 <div class=row>
@@ -795,9 +802,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 </main>
-<footer class=page-footer>
+<!-- <footer class=page-footer>
     <div class=container>
         <div class=row>
             <div class="col-rs col-xs-6 col-sm-6 col-lg-3 item item-1"><h4 class=title>About us</h4>
@@ -867,7 +874,7 @@
             </div>
         </div>
     </div>
-</footer>
+</footer> -->
 <div id=modalReserv role=dialog class="modal modal-reservation fade">
     <div class="modal-dialog modal-lg">
         <div class=modal-content-center>
