--- a/CaR/index.html
+++ b/CaR/index.html
@@ -94,15 +94,18 @@
         <div class="section-intro__inner container">
             <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
                 <header class=section-intro__heading><span class=h5> г. Подольск</span>
+
                      <span style="overflow: hidden;" class="title"><h2 style="position: relative;"class=text-danger>Автозапчасти</h2></span>
+                         <div class=section-intro__body>  БЫСТРО И НАДЕЖНО </div>
                     <div class=divider-decor>
+
                         <div class=div></div>
                         <div class=div></div>
                     </div>
                 </header>
                 <div class=section-intro__body><p> <span 9:00 - 21:00 <br> 7 дней в неделю<br>
                     <p>адрес магазина<br>
-                    <p><span class="blink"> <a href=tel:+18184925810>+7 (977) 492 58 10</a></span></div>
+                    <p><span class="blink" style="font-size: 22px"> <a href=tel:+18184925810>+7 (977) 492 58 10</a></span></div>
                 <!-- <a href=# role=button class="btn btn-regular btn-accent" data-toggle=modal
                    data-target=#modalReserv><span class=btn-text>Закажите услугу</span><span class=btn-over></span></a> -->
             </div>
@@ -120,7 +123,7 @@
                             <div class=div></div>
                             <div class=div></div>
                         </div>
-                        <p><b>Экономия Вашего времени</b>, а значит и денег, подбор запчастей в кратчайшие сроки.</p>
+                        <p style="font-size: 18px"><b>Экономия Вашего времени</b>, а значит и денег, подбор запчастей в кратчайшие сроки.</p>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-balancing"></i></div>
@@ -129,7 +132,7 @@
                             <div class=div></div>
                             <div class=div></div>
                         </div>
-                        <p><b>Широкий выбор</b> запчастей, аксессуаров, масел и технических жидкостей.</p>
+                        <p style="font-size: 18px"><b>Широкий выбор</b> запчастей, аксессуаров, масел и технических жидкостей.</p>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-battery"></i></div>
@@ -138,7 +141,7 @@
                             <div class=div></div>
                             <div class=div></div>
                         </div>
-                        <p><b>Разумные цены</b> за счет тесных отношений с производителями и поставщиками.</p>
+                        <p style="font-size: 18px"><b>Разумные цены</b> за счет тесных отношений с производителями и поставщиками.</p>
                     </div>
                     <!-- <div class="col-xs-12 col-sm-6 col-md-4 item">
                         <div class=img-wrap><i class="icon flaticon-brake-disk"></i></div>
@@ -324,15 +327,17 @@
             <div class=container>
                 <div class=row>
                     <div class=col-sm-6>
-                        <div class=section-quote__content><h2 class=section-quote__title>Custom tuning service</h2>
-                            <p>Behaviour we improving at something to. Evil true high lady roof men had open. To
-                                projection considered it precaution an melancholy or. Wound young you thing worse along
-                                being ham. Dissimilar of favourable
-                            <p>Boisterous estimating interested collecting get conviction friendship say boy. Him mrs
-                                shy article smiling respect opinion excited.</p><a href=# class=link-accent
-                                                                                   data-toggle=modal
-                                                                                   data-target=#modalReserv role=button>Get
-                                a free quote</a>
+                        <div class=section-quote__content><h2 class=section-quote__title>Ваш партнер</h2>
+                            <p style="font-size: 18px"> &nbsp;Состояние Вашего автомобиля во многом зависит  от качества техобслуживания и запасных частей.
+                              Очень важно правильно выбрать запчасти для автомобиля по разумной цене,
+                              при этом не забывая о качестве товара.
+                              <p style="font-size: 18px">&nbsp; Вместо того чтобы бесконечно копаться
+                              в интернете или бегать по разным магазинам просто позвоните нам,
+                              так как у нас есть для Вас нужная информация. Наш многолетний опыт на рынке
+                              позволит найти лучшее решение для каждой конкретной ситуации.</p>
+
+                            <p style="font-size: 18px">&nbsp;Ваш автомобиль - Ваш попутчик, не тратьте его терпение.</p>
+                               <p><span class="blink" style="font-size: 22px;"> <a style="color: #f33544"href=tel:+18184925810>+7 (977) 492 58 10</a></span>
                             <div class=section-quote__accent-over></div>
                             <div class=section-quote__man><img src=images/upload/man.png alt=""></div>
                         </div>
@@ -729,26 +734,29 @@
         <div class=container>
             <header class=section-row-number><h1><span>Контакты</span></h1></header>
         </div>
-            <section id=map class=section-map><h2 class=hide>Section title</h2></section>
+            <!-- <section id=map class=section-map><h2 class=hide>Secti
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d72431.79757562837!2d37.46736961344742!3d55.436623500394994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414aa84ee4fedc35%3A0x1461371650e8e0bd!2z0J_QvtC00L7Qu9GM0YHQuiwg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC7Lg!5e0!3m2!1sru!2sru!4v1545071771740" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </section> -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d72431.79757562837!2d37.46736961344742!3d55.436623500394994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414aa84ee4fedc35%3A0x1461371650e8e0bd!2z0J_QvtC00L7Qu9GM0YHQuiwg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC7Lg!5e0!3m2!1sru!2sru!4v1545071771740" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
         <div class=section-contacts__inner>
             <div class=container>
                 <div class="contacts-list row">
                     <div class="contacts-list__item col-sm-4"><i class="icon pe-7s-map-2"></i>
                         <ul>
-                            <li>64 Weigall Avenue, Mount Bryan,
-                            <li>SA 1587, Australia
+                            <li>адрес магазина,
+                            <li> г.подольск, Россия
                         </ul>
                     </div>
                     <div class="contacts-list__item col-sm-4"><i class="icon pe-7s-phone"></i>
                         <ul>
-                            <li><a href=tel:+18184925810>+1 (818) 492 58 10</a>
-                            <li><a href=fax:+18184102900>+1 (818) 410 29 00 (fax)</a>
+                            <li> <span class="blink" style="font-size: 22px;"> <a href=tel:+18184925810>+7 (977) 492 58 10</a></span>
+                            <!-- <li><a href=fax:+18184102900>+1 (818) 410 29 00 (fax)</a> -->
                         </ul>
                     </div>
                     <div class="contacts-list__item col-sm-4"><i class="icon pe-7s-clock"></i>
                         <ul>
-                            <li>Mon — Tue: 8:00 — 21:00
-                            <li>Sat — Sun: 10:00 — 18:00
+                            <li>Пн — Пт: 8:00 — 21:00
+                            <li>Сб — Вс: 10:00 — 18:00
                         </ul>
                     </div>
                 </div>
@@ -989,8 +997,3 @@
     </div>
 </div>
 <script src=js/script.min.js></script>
-<script>
-    function ttyt() {
-        alert("ok");
-    }
-</script>
